<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, SimpleRSSReaderActivity!</string>
    <string name="app_name">Avenue225</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Title of post</string>
    <color name="yellow">#faa00e</color>
    <color name="yellowLight">#fbb533</color>
    <color name="black">#000</color>
    <color name="white">#fff</color>
    <color name="hint_color">#b06100</color>
    <color name="orange_black">#d45b0a</color>
    <color name="grey">#5b5b5b</color>
    <color name="ligth_grey">#e6e6e6</color>
    
    <!-- Drawer strings -->
    <string name="action_settings">Settings</string>
    <string name="splash_slogan">Non loin de chez vous</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="version_text">version</string>
    <string name="feedback_text">Send Feedback</string>
     
    <!-- Functions-->
    <string name="reload_text">Reload</string>
    <string name="loading_text">Loading...</string>
    <string name="download_error_text">Error while downloading. Check you connection and try again.</string>
    <string name="network_error_text">No Internet! Please check your network connection.</string>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_drawer</item>
        <item>@drawable/ic_drawer1</item>
        <item>@drawable/ic_drawer2</item>
        <item>@drawable/delete</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/trans</item>
    </array>
     
  
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
 
         <!-- Shared custom -->
    <string name="menu_settings">Paramètres</string>
    
    <string name="update_section_title">Mise à jour</string>
    <string name="activate_update_title">Activer la mise à jour</string>
    <string name="activate_update_desc">Active la mise à jour automatique des articles</string>
    <string name="update_interval_title">Intervalle de mise à jour</string>
    <string name="update_interval_desc">Intervalle entre 2 mise à jour</string>
    
    <string name="notifications_section_title">Notifications</string>
    <string name="activate_notifications_title">Activer les notifications</string>
    <string name="activate_notifications_desc">Active les notifications dès qu\'il y a des nouveaux articles</string>
    <string name="ringtone_title">Activer les notifications</string>
    <string name="ringtone_desc">Choisir une sonnerie annonçant les nouveaux articles</string>
    <string name="activate_vibrate_title">Vibrer</string>
    <string name="activate_vibrate_desc">Active la viration pour les nouveaux articles</string>

    <string name="edition_section_title">Edition</string>
    <string name="edition_title">Avenue225</string>
    <string name="edition_desc">www.avenue225.com</string>    
    
   	<string name="conception_section_title">Conception et réalisation</string>
	<string name="conception_title">E-voir</string>
    <string name="conception_desc">www.e-voir.net</string>   
    <!-- Shared preferences template -->
    <string name="title_activity_main">Android Preferences Tutorial and Sample Code</string>
    <string name="prefs_text1">Standard Preferences</string>
    <string name="prefs_text2">Preferences with value displayed as summary</string>
    <string name="prefs_text3">Custom Preferences without extending PreferenceActivity</string>
 
</resources>