<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	 <PreferenceCategory android:title="@string/update_section_title">
	  <CheckBoxPreference android:title="@string/activate_update_title"
	   android:defaultValue="false" android:summary="@string/activate_update_desc"
	   android:key="activate_update" />
	  
	  
	  <ListPreference android:title="@string/update_interval_title"
	   android:summary="@string/update_interval_desc"
	   android:key="update_interval" android:defaultValue="1"
	   android:entries="@array/delayArray" android:entryValues="@array/delayValues" />
	
	 </PreferenceCategory>
 
	 <PreferenceCategory android:title="@string/notifications_section_title">
	  <CheckBoxPreference android:title="@string/activate_notifications_title"
	   android:defaultValue="false" android:summary="@string/activate_notifications_desc"
	   android:key="activate_notifications" />
	   <RingtonePreference android:name="@string/ringtone_title"
	   android:summary="@string/ringtone_desc" android:title="@string/notifications_section_title"
	   android:key="ringtone" />
	    <CheckBoxPreference android:title="@string/activate_vibrate_title"
	   android:defaultValue="false" android:summary="@string/activate_vibrate_desc"
	   android:key="activate_vibrate" />
	 </PreferenceCategory>

	 <PreferenceCategory android:title="@string/edition_section_title">
	     <PreferenceScreen
	        android:title="@string/edition_title"
	        android:summary="@string/edition_desc">
	    <intent android:action="android.intent.action.VIEW"
	            android:data="@string/edition_desc" />
	    </PreferenceScreen>
	</PreferenceCategory>
	
 	<PreferenceCategory android:title="@string/conception_section_title">
	     <PreferenceScreen
	        android:title="@string/conception_title"
	        android:summary="@string/conception_desc">
	    <intent android:action="android.intent.action.VIEW"
	            android:data="@string/conception_desc" />
	    </PreferenceScreen>
	</PreferenceCategory>

</PreferenceScreen>
